assets/scss/layout/_intro.scss
@use 'sass:color';
@use 'sass:math';
@use '../abstracts' as my;

$_background-width-beyond-column: 70px;

.intro {
  margin-bottom: my.$gutter * 3;
  line-height: my.$gutter;

  @media screen and (min-width: my.breakpoint('toggle-sidebar-position')) {
    margin-bottom: my.$gutter * 5;
  }
}

.intro > .container {
  @media screen and (min-width: my.breakpoint('toggle-sidebar-position')) {
    display: grid;

    grid-template-columns: minmax(my.$cover-max-width, 1fr) 1fr;

    gap: my.$gutter * 2;
  }
}

 .intro__cover {
  position: relative;
  z-index: my.layer('default');
  align-self: flex-start;
  width: 100%;
  margin-top: 0;
  margin-right: auto;
  margin-bottom: my.$gutter * 2;
  margin-left: auto;

  @include my.themed-color('background-color', ('brand', 'primary'));

  @media screen and (min-width: my.breakpoint('tablet__portrait')) {
    box-shadow: 0 60px 24px -36px my.palette('effects', 'shadow'), 0 48px 24px -48px color.adjust(my.palette('brand', 'tertiary'), $alpha: -0.6);

    @include my.themed-declaration ('green') {
      box-shadow: 0 60px 24px -36px my.palette('green-theme', 'effects', 'shadow'), 0 48px 24px -48px color.adjust(my.palette('green-theme', 'brand', 'tertiary'), $alpha: -0.6);
    }

    @include my.themed-declaration ('orange') {
      box-shadow: 0 60px 24px -36px my.palette('orange-theme', 'effects', 'shadow'), 0 48px 24px -48px color.adjust(my.palette('orange-theme', 'brand', 'tertiary'), $alpha: -0.6);
    }

    @include my.themed-declaration ('red') {
      box-shadow: 0 60px 24px -36px my.palette('red-theme', 'effects', 'shadow'), 0 48px 24px -48px color.adjust(my.palette('red-theme', 'brand', 'tertiary'), $alpha: -0.6);
    }
  }

  @media screen and (max-width: #{my.breakpoint('toggle-sidebar-position') - 0.01}) {
    @include my.full-width;

    max-width: none;
  }

  @media screen and (min-width: my.breakpoint('toggle-sidebar-position')) {
    grid-row-start: 1;
    grid-row-end: 3;

    width: my.$cover-max-width;
    margin-bottom: 0;
  }

  @media screen and (min-width: my.breakpoint('desktop')) {
    grid-row-end: 4;
  }
}

.intro__image,
.intro__video {
  display: block;
  width: 100%;
  height: auto;
  aspect-ratio: 780 / 440;
  object-fit: cover;
}

.intro__video {
  height: auto;

  animation: fadeIn 1.2s;

  @at-root {
    @keyframes fadeIn {
      0% {
        opacity: 0;
      }

      100% {
        opacity: 1;
      }
    }
  }
}

.intro__figure-switcher {
  @include my.reset;

  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  display: flex;

  align-items: center;
  justify-content: center;

  width: 100%;
  height: 100%;
  overflow: visible;

  cursor: pointer;

  border-radius: 0;

  > img {
    @include my.reset;

    width: 3rem;
    height: 3rem;

    pointer-events: none;

    filter: invert(1) drop-shadow(0 4px 4px my.palette('effects', 'shadow'));
    opacity: 0.65;

    transition-duration: 300ms;
    transition-property: filter;

    @include my.themed-declaration ('green') {
      filter: invert(1) drop-shadow(0 4px 4px my.palette('green-theme', 'effects', 'shadow'));
    }

    @include my.themed-declaration ('orange') {
      filter: invert(1) drop-shadow(0 4px 4px my.palette('orange-theme', 'effects', 'shadow'));
    }

    @include my.themed-declaration ('red') {
      filter: invert(1) drop-shadow(0 4px 4px my.palette('red-theme', 'effects', 'shadow'));
    }

    @media screen and (min-width: my.breakpoint('toggle-sidebar-position')) {
      width: 50px;
      height: auto;
    }
  }

  &::after {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;

    content: '';

    opacity: 0;

    transition-duration: 300ms;
    transition-property: opacity;

    @include my.themed-color('background-color', ('brand', 'primary'));
  }

  &:hover,
  &:focus {
    position: absolute;

    background: none;
    border: 0;
    box-shadow: none;

    > img {
      filter: invert(1) drop-shadow(my.palette('effects', 'shadow') 0 0 2px) drop-shadow(color.adjust(my.palette('brand', 'tertiary'), $alpha: -0.2) 0 0 4px);
      opacity: 1;

      @include my.themed-declaration ('green') {
        filter: invert(1) drop-shadow(my.palette('green-theme', 'effects', 'shadow') 0 0 2px) drop-shadow(color.adjust(my.palette('green-theme', 'brand', 'tertiary'), $alpha: -0.2) 0 0 4px);
      }

      @include my.themed-declaration ('orange') {
        filter: invert(1) drop-shadow(my.palette('orange-theme', 'effects', 'shadow') 0 0 2px) drop-shadow(color.adjust(my.palette('orange-theme', 'brand', 'tertiary'), $alpha: -0.2) 0 0 4px);
      }

      @include my.themed-declaration ('red') {
        filter: invert(1) drop-shadow(my.palette('red-theme', 'effects', 'shadow') 0 0 2px) drop-shadow(color.adjust(my.palette('red-theme', 'brand', 'tertiary'), $alpha: -0.2) 0 0 4px);
      }
    }

    &::after {
      opacity: 0.15;
    }
  }
}

.intro__campaign-preamble {
  margin-bottom: my.$gutter * 2;

  @media screen and (min-width: my.breakpoint('toggle-sidebar-position')) {
    position: relative;

    display: flex;

    flex-direction: column;

    justify-content: center;

    min-height: 100px;
    padding-top: my.$gutter;
    padding-right: my.$gutter;
    padding-bottom: my.$gutter * 2;
    padding-left: my.$gutter * 2;
    margin-right: my.$gutter * -1;
    margin-bottom: 0;
    margin-left: my.$gutter * -2;

    color: my.palette('text', 'light');

    @include my.themed-declaration ('orange') {
      color: my.text-contrast(my.palette('orange-theme', 'brand', 'primary'));
    }

    &::before,
    &::after {
      position: absolute;
      top: 0;
      bottom: 0;

      content: '';
    }

    &::before {
      right: min(0px, calc((100vw - my.$max-width) / -2));
      z-index: my.layer('below');

      width: 100vw;

      border-bottom-right-radius: 60px;

      @include my.themed-color('background-color', ('brand', 'primary'));
    }

    &::after {
      left: 0;
      z-index: my.layer('below');

      width: 470px;

      background-image: my.image('themes/blue/preamble.svg'), linear-gradient(to bottom, transparent, my.palette('brand', 'quaternary'));
      background-position: 100% 0;
      border-bottom-right-radius: 60px;

      @include my.themed-declaration ('green') {
        background-image: my.image('themes/green/preamble.svg'), linear-gradient(to bottom, transparent, my.palette('green-theme', 'brand', 'quaternary'));
      }

      @include my.themed-declaration ('orange') {
        background-image: my.image('themes/orange/preamble.svg'), linear-gradient(to bottom, transparent, my.palette('orange-theme', 'brand', 'quaternary'));
      }

      @include my.themed-declaration ('red') {
        background-image: my.image('themes/red/preamble.svg'), linear-gradient(to bottom, transparent, my.palette('red-theme', 'brand', 'quaternary'));
      }
    }
  }

  p {
    margin: 0;

    @media screen and (min-width: my.breakpoint('toggle-sidebar-position')) {
      max-width: 18em;
      // necessary to prevent the clearing of the float caused by the `max-width`
      overflow: hidden;
    }
  }
}

.intro__campaign-progress {
  margin-bottom: my.$gutter * 2;

  @media screen and (min-width: my.breakpoint('toggle-sidebar-position')) {
    min-width: 0;
    margin-top: auto;
    margin-bottom: auto;
  }
}

.call-to-action-values {
  display: flex;

  flex-wrap: wrap;

  gap: my.$gutter;

  justify-content: space-between;

  font-size: my.ms-step(-1);

  @media screen and (min-width: my.breakpoint('toggle-sidebar-position')) {
    z-index: my.layer('default');

    grid-column-start: 1;
    grid-column-end: -1;

    align-items: center;
  }

  @media screen and (min-width: my.breakpoint('desktop')) {
    grid-column-start: 2;

    align-items: flex-start;

    margin-top: auto;
  }
}

.call-to-action-values__intro,
.call-to-action-values__campaign-type {
  flex-basis: 0;
  flex-grow: 1;

  margin: 0;
}

.call-to-action-values__intro {
  flex-basis: 100%;

  max-width: none;

  color: my.palette('neutral', 'base');
  text-transform: uppercase;
}

.call-to-action-values__campaign-type {
  @include my.themed-color('color', ('brand', 'primary'));
}

.call-to-action-values__donation-values {
  flex-grow: 1;
}

